--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -257,10 +257,15 @@ body {
     font: 18px 'Lato', sans-serif;
   }
 
-  .owl-carousel {
+  #birthdays-carousel {
+    margin: 0 auto;
+
     img {
       height: 100px;
     }
+  }
+
+  .prev, .next {
   }
 
   .caption-name {
@@ -440,120 +445,30 @@ body {
   }
 }
 
+#footer-carousel {
 
-.carousel {
-  border-top: 1px solid #c7c7c7;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  display: inline;
+  .prev, .next {
+  }
 
-  .owl-carousel {
-    width: 90%;
-    margin: 0 auto;
+  .carousel {
+    border-top: 1px solid #c7c7c7;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: inline;
   }
 }
 
-.owl-theme .owl-controls{
-  margin-top: 10px;
-  text-align: center;
-}
-
-
-.owl-theme .owl-controls .owl-buttons div{
-  color: #FFF;
-  display: inline-block;
-  zoom: 1;
-  *display: inline;/*IE7 life-saver */
-  margin: 5px;
-  padding: 3px 10px;
-  font-size: 12px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
-  background: #869791;
-  filter: Alpha(Opacity=50);/*IE7 fix*/
-  opacity: 0.5;
-}
-/* Clickable class fix problem with hover on touch devices */
-/* Use it for non-touch hover action */
-.owl-theme .owl-controls.clickable .owl-buttons div:hover{
-  filter: Alpha(Opacity=100);/*IE7 fix*/
-  opacity: 1;
+.prev, .next {
+  font-size: 75px;
   text-decoration: none;
 }
 
-
-.owl-theme .owl-controls .owl-page{
-  display: inline-block;
-  zoom: 1;
-  *display: inline;/*IE7 life-saver */
-}
-.owl-theme .owl-controls .owl-page span{
-  display: block;
-  width: 12px;
-  height: 12px;
-  margin: 5px 7px;
-  filter: Alpha(Opacity=50);/*IE7 fix*/
-  opacity: 0.5;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  background: #869791;
+.prev:before {
+  content: "\3008\ ";
 }
 
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span{
-  filter: Alpha(Opacity=100);/*IE7 fix*/
-  opacity: 1;
+.next:before {
+  content: "\3009\ ";
 }
 
-.owl-theme .owl-controls .owl-page span.owl-numbers{
-  height: auto;
-  width: auto;
-  color: #FFF;
-  padding: 2px 10px;
-  font-size: 12px;
-  //  border-radius: 30px;
-}
-
-.owl-item.loading{
-  min-height: 150px;
-  background: url(AjaxLoader.gif) no-repeat center center
-}
-
-#owl-demo .owl-item > div img {
-  display: block;
-  width: 100%;
-  height: auto;
-  //  border-radius: 3px;
-  margin-bottom:4px;
-}
-
-#owl-demo .owl-item > div{
-  background : #42bdc2;
-  text-align: center;
-  padding:50px 0px;
-  margin:3px;
-  color: white;
-  font-size:32px;
-  border:1px white;
-}
-
-.wrapper-with-margin{
-  margin:0px 50px;
-}
-
-
-.owl-theme .owl-controls .owl-buttons div {
-  position: absolute;
-}
-
-.owl-theme .owl-controls .owl-buttons .owl-prev{
-  left: -35px;
-  top: 55px;
-}
-
-.owl-theme .owl-controls .owl-buttons .owl-next{
-  right: -35px;
-  top: 55px;
-}
+// filter: Alpha(Opacity=100);/*IE7 fix*/
