--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -348,48 +348,95 @@ body {
   margin: 5px;
   padding-left: 30px;
 
+  .icon {
+    background: url('../images/icon0.png') no-repeat;
+    display: block;
+    width: 16px;
+    height: 16px;
+  }
+
   .iconbar {
     list-style-type: none;
     margin-right: 30px;
     margin-top: 10px;
 
+    @mixin active_icon {
+      opacity: 1;
+      filter: Alpha(Opacity=100);
+    }
+
     li {
       display: inline;
+
+      .icon0, .icon1, .icon2, .icon3, .icon4 {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        opacity: .6;
+        filter: Alpha(Opacity=60);
+      }
+
+      .icon0:hover, .icon1:hover, .icon2:hover, .icon3:hover, .icon4:hover {
+        @include active_icon;
+      }
+
+    }
+
+    li.active {
+      .icon0, .icon1, .icon2, .icon3, .icon4 {
+        @include active_icon;
+      }
+    }
+
+    .icon0 {
+      background: url('../images/icon0.png') no-repeat;
+    }
+    .icon1 {
+      background: url('../images/icon1.png') no-repeat;
+    }
+    .icon2 {
+      background: url('../images/icon2.png') no-repeat;
+    }
+    .icon3 {
+      background: url('../images/icon3.png') no-repeat;
+    }
+    .icon4 {
+      background: url('../images/icon4.png') no-repeat;
     }
   }
+}
 
-  .article {
+.article {
 
-    p:first-child {
-      color: #ededed;
-      font: 500 10px Lato;
-    }
-
-    p {
-      color: #ffffff;
-      font: 300 14px Lato;
-    }
+  p:first-child {
+    color: #ededed;
+    font: 500 10px Lato;
   }
 
-  .article-border {
-    border-bottom: 1px solid #ededed;
+  p {
+    color: #ffffff;
+    font: 300 14px Lato;
   }
+}
 
-  .more {
+.article-border {
+  border-bottom: 1px solid #ededed;
+}
 
-    a {
-      color: #ededed;
-      font: 500 12px Lato;
-      margin-right: 30px;
-    }
+.more {
+
+  a {
+    color: #ededed;
+    font: 500 12px Lato;
+    margin-right: 30px;
   }
+}
 
-  .all-news {
-    a {
-      color: #96d8d3;
-      font: 400 11px Lato;
-      margin-right: 30px;
-    }
+.all-news {
+  a {
+    color: #96d8d3;
+    font: 400 11px Lato;
+    margin-right: 30px;
   }
 }
 
@@ -470,5 +517,3 @@ body {
 .next:before {
   content: "\3009\ ";
 }
-
-// filter: Alpha(Opacity=100);/*IE7 fix*/
